--- a/generators/app/templates/ext-webview-ts/vscode-webpack/package.json
+++ b/generators/app/templates/ext-webview-ts/vscode-webpack/package.json
@@ -18,7 +18,24 @@
         "command": <%- JSON.stringify(`${name}.helloWorld`) %>,
         "title": "Hello World"
       }
-    ]
+    ],
+    "viewsContainers": {
+        "activitybar": [
+            {
+                "id": <%- JSON.stringify(`${name}.helloView`) %>,
+                "title": "helloView"
+            }
+        ]
+    },
+    "views": {
+            "trackView": [
+                {
+                    "id": <%- JSON.stringify(`${name}.helloView`) %>,
+                    "name": "helloView",
+                    "type": "webview"
+                }
+            ]
+        }
   },
   "scripts": {
     "vscode:prepublish": "<%= pkgManager %> run package",
