--- a/generators/app/templates/ext-webview-ts/vscode-webpack/package.json
+++ b/generators/app/templates/ext-webview-ts/vscode-webpack/package.json
@@ -49,7 +49,7 @@
     "lint": "eslint src --ext ts",
     "test": "vscode-test"<% if (insiders) { %>,
     "update-proposed-api": "vscode-dts dev"<% } %>,
-    "dev":"cd webview & vite build --watch"
+    "dev":"cd webview && vite build --watch"
   },
   "devDependencies": {
     <%- dep("@types/vscode") %>,
@@ -64,6 +64,7 @@
     <%- dep("webpack-cli") %>,
     <%- dep("@vscode/test-cli") %>,
     <%- dep("@vscode/test-electron") %><% if (insiders) { %>,
-    <%- dep("vscode-dts") %><% } %>
+    <%- dep("vscode-dts") %><% } %><% if (vscodeUIInit) { %>,
+    <%- dep("@vscode/webview-ui-toolkit") %><%} %>
   }
 }
