--- a/generators/app/dependencyVersions/package.json
+++ b/generators/app/dependencyVersions/package.json
@@ -30,6 +30,7 @@
         "webpack-cli": "^5.1.4",
         "webpack-dev-server": "^4.15.1",
         "assert": "^2.1.0",
-        "process": "^0.11.10"
+        "process": "^0.11.10",
+        "@vscode/webview-ui-toolkit":"^1.4.0"
     }
 }
