docs: :memo: readMe 更新

--- a/generators/app/templates/ext-webview-ts/vscode-webpack/package.json
+++ b/generators/app/templates/ext-webview-ts/vscode-webpack/package.json
@@ -22,7 +22,7 @@
     "viewsContainers": {
         "activitybar": [
             {
-                "id": <%- JSON.stringify(`${name}.helloView`) %>,
+                "id": "helloView",
                 "title": "helloView",
                 "icon":"resource/icon.svg"
             }
