ci: :rocket: 修改debug任务

--- a/generators/app/templates/ext-webview-ts/vscode-webpack/vscode/tasks.json
+++ b/generators/app/templates/ext-webview-ts/vscode-webpack/vscode/tasks.json
@@ -3,8 +3,19 @@
 {
 	"version": "2.0.0",
 	"tasks": [
+        {
+            "label": "vite",
+            "type": "npm",
+            "script": "dev",
+            "problemMatcher": [],
+            "isBackground": true,
+            "presentation": {
+                "reveal": "always"
+            },
+        },
 		{
 			"type": "npm",
+            "label":"vscode",
 			"script": "watch",
 			"problemMatcher": "$ts-webpack-watch",
 			"isBackground": true,
@@ -12,10 +23,6 @@
 				"reveal": "never",
 				"group": "watchers"
 			},
-			"group": {
-				"kind": "build",
-				"isDefault": true
-			}
 		},
 		{
 			"type": "npm",
@@ -35,6 +42,18 @@
 				"npm: watch-tests"
 			],
 			"problemMatcher": []
+		},
+        {
+			"label": "tasks: run",
+			"dependsOn": [
+				"vscode",
+				"vite"
+			],
+			"problemMatcher": [],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
 		}
 	]
 }
