--- a/generators/app/templates/ext-webview-js/vscode/launch.json
+++ b/generators/app/templates/ext-webview-js/vscode/launch.json
@@ -11,7 +11,9 @@
 			"request": "launch",
 			"args": [
 				"--extensionDevelopmentPath=${workspaceFolder}"
-			]
+			],
+            "preLaunchTask": "${defaultBuildTask}"
 		}
+
 	]
 }
