--- a/generators/app/templates/ext-webview-js/package.json
+++ b/generators/app/templates/ext-webview-js/package.json
@@ -4,7 +4,7 @@
     "description": <%- JSON.stringify(description) %>,
     "version": "0.0.1",
     "engines": {
-        "vscode": <%- JSON.stringify(vsCodeEngine) %>
+        "vscode": <%- JSON.stringify(version) %>
     },
     "categories": [
         "Other"
