--- a/generators/app/templates/ext-webview-ts/vscode-webpack/vscode/tasks.json
+++ b/generators/app/templates/ext-webview-ts/vscode-webpack/vscode/tasks.json
@@ -1,8 +1,8 @@
 // See https://go.microsoft.com/fwlink/?LinkId=733558
 // for the documentation about the tasks.json format
 {
-	"version": "2.0.0",
-	"tasks": [
+    "version": "2.0.0",
+    "tasks": [
         {
             "label": "vite",
             "type": "npm",
@@ -11,49 +11,49 @@
             "isBackground": true,
             "presentation": {
                 "reveal": "always"
+            }
+        },
+        {
+            "type": "npm",
+            "label": "vscode",
+            "script": "watch",
+            "problemMatcher": "$ts-webpack-watch",
+            "isBackground": true,
+            "presentation": {
+                "reveal": "never",
+                "group": "watchers"
             },
         },
-		{
-			"type": "npm",
-            "label":"vscode",
-			"script": "watch",
-			"problemMatcher": "$ts-webpack-watch",
-			"isBackground": true,
-			"presentation": {
-				"reveal": "never",
-				"group": "watchers"
-			},
-		},
-		{
-			"type": "npm",
-			"script": "watch-tests",
-			"problemMatcher": "$tsc-watch",
-			"isBackground": true,
-			"presentation": {
-				"reveal": "never",
-				"group": "watchers"
-			},
-			"group": "build"
-		},
-		{
-			"label": "tasks: watch-tests",
-			"dependsOn": [
-				"npm: watch",
-				"npm: watch-tests"
-			],
-			"problemMatcher": []
-		},
         {
-			"label": "tasks: run",
-			"dependsOn": [
-				"vscode",
-				"vite"
-			],
-			"problemMatcher": [],
+            "type": "npm",
+            "script": "watch-tests",
+            "problemMatcher": "$tsc-watch",
+            "isBackground": true,
+            "presentation": {
+                "reveal": "never",
+                "group": "watchers"
+            },
+            "group": "build"
+        },
+        {
+            "label": "tasks: watch-tests",
+            "dependsOn": [
+                "npm: watch",
+                "npm: watch-tests"
+            ],
+            "problemMatcher": []
+        },
+        {
+            "label": "tasks: run",
+            "dependsOn": [
+                "npm:vscode",
+                "npm:vite"
+            ],
+            "problemMatcher": [],
             "group": {
                 "kind": "build",
                 "isDefault": true
             }
-		}
-	]
+        }
+    ]
 }
